--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,12 +30,7 @@ jobs:
       - run:
           name: test
           command: |
-            mkdir /tmp/test-results
-            TEST_FILES="$(circleci tests glob 'spec/**/*_spec.rb' | circleci tests split --split-by=timings)"
-            docker-compose exec web bin/rspec --format progress \
-                                                                  --format RspecJunitFormatter \
-                                                                  --out /tmp/test-results/rspec.xml \
-                                                                  $TEST_FILES
+            docker-compose exec web rspec
       - run:
           name: docker-compose down
           command: docker-compose down
