--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,10 +27,12 @@ jobs:
           command: |
             set -x
             docker-compose up -d
+            docker-compose exec --env RAILS_ENV=test web rails db:create
+            docker-compose exec --env RAILS_ENV=test web rails db:migrate            
       - run:
           name: test
           command: |
-            docker-compose exec web rspec
+            docker-compose --env RAILS_ENV=test exec web rspec
       - run:
           name: docker-compose down
           command: docker-compose down
