--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
       - run:
           name: test
           command: |
-            docker-compose --env RAILS_ENV=test exec web rspec
+            docker-compose exec --env RAILS_ENV=test web rspec
       - run:
           name: docker-compose down
           command: docker-compose down
